@@ -5,6 +5,7 @@
 * Fix - Keep default behaviour from sliders on mobile
 * Fix - Adjusted content.php to be more flexible for styles (LSX Blog Customizer requirement)
 * Fix - Small adjust on post archive - post item footer style
+* Fix - Fixed post author when 'get_the_author' is not available
 
 ### 1.8.4
 * Fix - Re-added the get_comments_number() fix
